# arco-do-tc-2

./: .coderabbit.yaml  .mergify.yml  .pre-commit-config.yaml  CLAUDE.md  DECLARACAO_USO_IA.md  README.md  bugs_originais.md  fase0_fundacao_oraculo.md  fase1_nucleo_inferencia.md  fase2_extratores_pyspark.md  fase3_validacao_escala.md  pyproject.toml  roadmap_portabilidade.md  sonar-project.properties  todolist_fase0.md  todolist_fase1.md
.github/workflows/: ci.yml
oracle/: Dockerfile  README.md  docker_explain.md  entrypoint.sh
oracle/patches/: 0001-mongo-guice-binding.patch  0004-path-of-to-paths-get-inference.patch  0004-path-of-to-paths-get-uschema.patch  0005-neo4jmain-cli-arg-no-hardcode.patch  0006-helpers-generic-id.patch  0007-arraysc-empty-shortcircuit.patch  README.md
oracle/uschema-build/runner/: pom.xml
resources/: README.md
resources/mongodb/: model.xmi  model_mintest.xmi  model_northwind.xmi
resources/neo4j/: movies_min.xmi  up_large.xmi  up_larger.xmi  up_medium.xmi
scripts/: README.md
src/uschema/: __init__.py
src/uschema/extractors/: __init__.py  triple.py
src/uschema/inference/: __init__.py  schema_inference.py  strategies.py
src/uschema/metamodel/: __init__.py  registry.py  xmi.py
src/uschema/naming/: __init__.py  inflector.py
src/uschema/validation/: __init__.py  equivalence.py
tests/datasets/: README.md
tests/regression/: INVENTARIO.md  README.md
tests/unit/: test_equivalence.py  test_inflector.py  test_inflector_northwind.py  test_metadata.py  test_metamodel.py  test_raw.py  test_schema_inference.py  test_strategies.py  test_strategies_emf.py  test_triple.py
